--- a/Enums.html
+++ b/Enums.html
@@ -33,7 +33,7 @@
       </p>
     
         <p class="header-col header-col--secondary">
-          <a class="header-link" href="https://github.com/rnine/AMCoreAudio">
+          <a class="header-link" href="https://github.com/rnine/SimplyCoreAudio">
             <img class="header-icon" src="img/gh.png"/>
             View on GitHub
           </a>
@@ -71,7 +71,7 @@
             <a class="nav-group-name-link" href="Enums.html">Enumerations</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a class="nav-group-task-link" href="Enums/Direction.html">Direction</a>
+                <a class="nav-group-task-link" href="Enums/Scope.html">Scope</a>
               </li>
               <li class="nav-group-task">
                 <a class="nav-group-task-link" href="Enums/TerminalType.html">TerminalType</a>
@@ -116,9 +116,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:15SimplyCoreAudio9DirectionO"></a>
-                    <a name="//apple_ref/swift/Enum/Direction" class="dashAnchor"></a>
-                    <a class="token" href="#/s:15SimplyCoreAudio9DirectionO">Direction</a>
+                    <a name="/s:15SimplyCoreAudio5ScopeO"></a>
+                    <a name="//apple_ref/swift/Enum/Scope" class="dashAnchor"></a>
+                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO">Scope</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -126,15 +126,15 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Indicates the direction used by an <code><a href="Classes/AudioDevice.html">AudioDevice</a></code> or <code><a href="Classes/AudioStream.html">AudioStream</a></code>.</p>
+                        <p>Indicates the scope used by an <code><a href="Classes/AudioDevice.html">AudioDevice</a></code> or <code><a href="Classes/AudioStream.html">AudioStream</a></code>.</p>
 
-                        <a href="Enums/Direction.html" class="slightly-smaller">See more</a>
+                        <a href="Enums/Scope.html" class="slightly-smaller">See more</a>
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">Direction</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">Scope</span></code></pre>
 
                         </div>
                       </div>
@@ -162,7 +162,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TerminalType</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TerminalType</span></code></pre>
 
                         </div>
                       </div>
@@ -190,7 +190,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TransportType</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TransportType</span></code></pre>
 
                         </div>
                       </div>
