--- a/Structs.html
+++ b/Structs.html
@@ -33,7 +33,7 @@
       </p>
     
         <p class="header-col header-col--secondary">
-          <a class="header-link" href="https://github.com/rnine/AMCoreAudio">
+          <a class="header-link" href="https://github.com/rnine/SimplyCoreAudio">
             <img class="header-icon" src="img/gh.png"/>
             View on GitHub
           </a>
@@ -71,7 +71,7 @@
             <a class="nav-group-name-link" href="Enums.html">Enumerations</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a class="nav-group-task-link" href="Enums/Direction.html">Direction</a>
+                <a class="nav-group-task-link" href="Enums/Scope.html">Scope</a>
               </li>
               <li class="nav-group-task">
                 <a class="nav-group-task-link" href="Enums/TerminalType.html">TerminalType</a>
@@ -126,7 +126,7 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>This struct holds volume, mute, and playthru information about a given channel and direction of an <code><a href="Classes/AudioDevice.html">AudioDevice</a></code>.</p>
+                        <p>This struct holds volume, mute, and playthru information about a given channel and scope of an <code><a href="Classes/AudioDevice.html">AudioDevice</a></code>.</p>
 
                         <a href="Structs/VolumeInfo.html" class="slightly-smaller">See more</a>
                       </div>
