--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums/Scope.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums/Scope.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Direction Enumeration Reference</title>
+    <title>Scope Enumeration Reference</title>
     <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/swift/Enum/Direction" class="dashAnchor"></a>
+    <a name="//apple_ref/swift/Enum/Scope" class="dashAnchor"></a>
 
-    <a title="Direction Enumeration Reference"></a>
+    <a title="Scope Enumeration Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -33,7 +33,7 @@
       </p>
     
         <p class="header-col header-col--secondary">
-          <a class="header-link" href="https://github.com/rnine/AMCoreAudio">
+          <a class="header-link" href="https://github.com/rnine/SimplyCoreAudio">
             <img class="header-icon" src="../img/gh.png"/>
             View on GitHub
           </a>
@@ -44,7 +44,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../index.html">SimplyCoreAudio Reference</a>
       <img class="carat" src="../img/carat.png" />
-      Direction Enumeration Reference
+      Scope Enumeration Reference
     </p>
 
     <div class="content-wrapper">
@@ -71,7 +71,7 @@
             <a class="nav-group-name-link" href="../Enums.html">Enumerations</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a class="nav-group-task-link" href="../Enums/Direction.html">Direction</a>
+                <a class="nav-group-task-link" href="../Enums/Scope.html">Scope</a>
               </li>
               <li class="nav-group-task">
                 <a class="nav-group-task-link" href="../Enums/TerminalType.html">TerminalType</a>
@@ -103,15 +103,15 @@
 
         <section class="section">
           <div class="section-content top-matter">
-            <h1>Direction</h1>
+            <h1>Scope</h1>
               <div class="declaration">
                 <div class="language">
                   
-                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">Direction</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
+                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">Scope</span></code></pre>
 
                 </div>
               </div>
-            <p>Indicates the direction used by an <code><a href="../Classes/AudioDevice.html">AudioDevice</a></code> or <code><a href="../Classes/AudioStream.html">AudioStream</a></code>.</p>
+            <p>Indicates the scope used by an <code><a href="../Classes/AudioDevice.html">AudioDevice</a></code> or <code><a href="../Classes/AudioStream.html">AudioStream</a></code>.</p>
 
           </div>
         </section>
@@ -123,9 +123,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:15SimplyCoreAudio9DirectionO8playbackyA2CmF"></a>
-                    <a name="//apple_ref/swift/Element/playback" class="dashAnchor"></a>
-                    <a class="token" href="#/s:15SimplyCoreAudio9DirectionO8playbackyA2CmF">playback</a>
+                    <a name="/s:15SimplyCoreAudio5ScopeO6globalyA2CmF"></a>
+                    <a name="//apple_ref/swift/Element/global" class="dashAnchor"></a>
+                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO6globalyA2CmF">global</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -133,14 +133,14 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Playback direction</p>
+                        <p>Global scope</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">playback</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">global</span></code></pre>
 
                         </div>
                       </div>
@@ -150,9 +150,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:15SimplyCoreAudio9DirectionO9recordingyA2CmF"></a>
-                    <a name="//apple_ref/swift/Element/recording" class="dashAnchor"></a>
-                    <a class="token" href="#/s:15SimplyCoreAudio9DirectionO9recordingyA2CmF">recording</a>
+                    <a name="/s:15SimplyCoreAudio5ScopeO5inputyA2CmF"></a>
+                    <a name="//apple_ref/swift/Element/input" class="dashAnchor"></a>
+                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO5inputyA2CmF">input</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -160,14 +160,95 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Recording direction</p>
+                        <p>Input scope</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">recording</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">input</span></code></pre>
+
+                        </div>
+                      </div>
+                    </section>
+                  </div>
+                </li>
+                <li class="item">
+                  <div>
+                    <code>
+                    <a name="/s:15SimplyCoreAudio5ScopeO6outputyA2CmF"></a>
+                    <a name="//apple_ref/swift/Element/output" class="dashAnchor"></a>
+                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO6outputyA2CmF">output</a>
+                    </code>
+                  </div>
+                  <div class="height-container">
+                    <div class="pointer-container"></div>
+                    <section class="section">
+                      <div class="pointer"></div>
+                      <div class="abstract">
+                        <p>Output scope</p>
+
+                      </div>
+                      <div class="declaration">
+                        <h4>Declaration</h4>
+                        <div class="language">
+                          <p class="aside-title">Swift</p>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">output</span></code></pre>
+
+                        </div>
+                      </div>
+                    </section>
+                  </div>
+                </li>
+                <li class="item">
+                  <div>
+                    <code>
+                    <a name="/s:15SimplyCoreAudio5ScopeO11playthroughyA2CmF"></a>
+                    <a name="//apple_ref/swift/Element/playthrough" class="dashAnchor"></a>
+                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO11playthroughyA2CmF">playthrough</a>
+                    </code>
+                  </div>
+                  <div class="height-container">
+                    <div class="pointer-container"></div>
+                    <section class="section">
+                      <div class="pointer"></div>
+                      <div class="abstract">
+                        <p>Playthrough scope</p>
+
+                      </div>
+                      <div class="declaration">
+                        <h4>Declaration</h4>
+                        <div class="language">
+                          <p class="aside-title">Swift</p>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">playthrough</span></code></pre>
+
+                        </div>
+                      </div>
+                    </section>
+                  </div>
+                </li>
+                <li class="item">
+                  <div>
+                    <code>
+                    <a name="/s:15SimplyCoreAudio5ScopeO8wildcardyA2CmF"></a>
+                    <a name="//apple_ref/swift/Element/wildcard" class="dashAnchor"></a>
+                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO8wildcardyA2CmF">wildcard</a>
+                    </code>
+                  </div>
+                  <div class="height-container">
+                    <div class="pointer-container"></div>
+                    <section class="section">
+                      <div class="pointer"></div>
+                      <div class="abstract">
+                        <p>Wildcard scope</p>
+
+                      </div>
+                      <div class="declaration">
+                        <h4>Declaration</h4>
+                        <div class="language">
+                          <p class="aside-title">Swift</p>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">wildcard</span></code></pre>
 
                         </div>
                       </div>
