--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
@@ -32,7 +32,7 @@
       </p>
     
         <p class="header-col header-col--secondary">
-          <a class="header-link" href="https://github.com/rnine/AMCoreAudio">
+          <a class="header-link" href="https://github.com/rnine/SimplyCoreAudio">
             <img class="header-icon" src="img/gh.png"/>
             View on GitHub
           </a>
@@ -70,7 +70,7 @@
             <a class="nav-group-name-link" href="Enums.html">Enumerations</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a class="nav-group-task-link" href="Enums/Direction.html">Direction</a>
+                <a class="nav-group-task-link" href="Enums/Scope.html">Scope</a>
               </li>
               <li class="nav-group-task">
                 <a class="nav-group-task-link" href="Enums/TerminalType.html">TerminalType</a>
