publish: Adding documentation for `SimplyCoreAudio` class.
generated from commit 370b5c791bf2af4168b2fa96da7251035e3d9fe7

--- a/Classes/SimplyCoreAudio.html
+++ b/Classes/SimplyCoreAudio.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="../index.html">
           SimplyCoreAudio Docs
         </a>
-         (98% documented)
+         (100% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -111,7 +111,13 @@
 
                 </div>
               </div>
-            <p>Undocumented</p>
+            <p><code>SimplyCoreAudio</code> provides convenient audio hardware-related functions and allows audio hardware-related
+notifications to work.</p>
+
+<p>Additionally, you may create and remove aggregate devices using this class.</p>
+
+<p>Always remember to keep a strong reference to an object of this class to ensure audio hardware-related notifications
+are delivered.</p>
 
           </div>
         </section>
