--- a/Classes.html
+++ b/Classes.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="index.html">
           SimplyCoreAudio Docs
         </a>
-         (98% documented)
+         (100% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -219,7 +219,13 @@ For more information, please refer to Core Audio&rsquo;s documentation or source
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Undocumented</p>
+                        <p><code>SimplyCoreAudio</code> provides convenient audio hardware-related functions and allows audio hardware-related
+notifications to work.</p>
+
+<p>Additionally, you may create and remove aggregate devices using this class.</p>
+
+<p>Always remember to keep a strong reference to an object of this class to ensure audio hardware-related notifications
+are delivered.</p>
 
                         <a href="Classes/SimplyCoreAudio.html" class="slightly-smaller">See more</a>
                       </div>
