--- a/Enums.html
+++ b/Enums.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="index.html">
           SimplyCoreAudio Docs
         </a>
-         (98% documented)
+         (100% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -127,6 +127,9 @@
                       <div class="pointer"></div>
                       <div class="abstract">
                         <p>Indicates the scope used by an <code><a href="Classes/AudioDevice.html">AudioDevice</a></code> or <code><a href="Classes/AudioStream.html">AudioStream</a></code>.</p>
+
+<p>Please notice that <code><a href="Classes/AudioStream.html">AudioStream</a></code> only supports <code>input</code> or <code>output</code> scopes,
+whether as <code><a href="Classes/AudioDevice.html">AudioDevice</a></code> may, additionally, support <code>global</code> and <code>playthrough</code>.</p>
 
                         <a href="Enums/Scope.html" class="slightly-smaller">See more</a>
                       </div>
