--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums/Scope.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums/Scope.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="../index.html">
           SimplyCoreAudio Docs
         </a>
-         (98% documented)
+         (100% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -112,6 +112,9 @@
                 </div>
               </div>
             <p>Indicates the scope used by an <code><a href="../Classes/AudioDevice.html">AudioDevice</a></code> or <code><a href="../Classes/AudioStream.html">AudioStream</a></code>.</p>
+
+<p>Please notice that <code><a href="../Classes/AudioStream.html">AudioStream</a></code> only supports <code>input</code> or <code>output</code> scopes,
+whether as <code><a href="../Classes/AudioDevice.html">AudioDevice</a></code> may, additionally, support <code>global</code> and <code>playthrough</code>.</p>
 
           </div>
         </section>
@@ -222,33 +225,6 @@
                         <div class="language">
                           <p class="aside-title">Swift</p>
                           <pre class="highlight swift"><code><span class="k">case</span> <span class="n">playthrough</span></code></pre>
-
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/s:15SimplyCoreAudio5ScopeO8wildcardyA2CmF"></a>
-                    <a name="//apple_ref/swift/Element/wildcard" class="dashAnchor"></a>
-                    <a class="token" href="#/s:15SimplyCoreAudio5ScopeO8wildcardyA2CmF">wildcard</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Wildcard scope</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">wildcard</span></code></pre>
 
                         </div>
                       </div>
