publish: Misc documentation improvements.
generated from commit 9fe87dac7e811f4da4579c0bf971bea293868650

--- a/Classes.html
+++ b/Classes.html
@@ -126,7 +126,7 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>This class represents an audio device in the system and allows subscribing to audio device notifications.</p>
+                        <p><code>AudioDevice</code> represents an audio device in the system.</p>
 
 <p>Devices may be physical or virtual. For a comprehensive list of supported types, please refer to <code><a href="Enums/TransportType.html">TransportType</a></code>.</p>
 
@@ -157,9 +157,10 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>This class represents a Core Audio object currently present in the system. In Core Audio,
-audio objects are referenced by its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.
-For more information, please refer to Core Audio&rsquo;s documentation or source code.</p>
+                        <p><code>AudioObject</code> represents a Core Audio object currently present in the system. In Core Audio,
+audio objects are referenced by its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.</p>
+
+<p>For more information, please refer to Core Audio&rsquo;s documentation or source code.</p>
 
                         <a href="Classes/AudioObject.html" class="slightly-smaller">See more</a>
                       </div>
@@ -188,9 +189,7 @@ For more information, please refer to Core Audio&rsquo;s documentation or source
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p><code>AudioStream</code></p>
-
-<p>This class represents an audio stream belonging to an audio object.</p>
+                        <p><code>AudioStream</code> represents an audio stream that belongs to an audio object.</p>
 
                         <a href="Classes/AudioStream.html" class="slightly-smaller">See more</a>
                       </div>
