--- a/Classes/AudioDevice.html
+++ b/Classes/AudioDevice.html
@@ -112,7 +112,7 @@
 
                 </div>
               </div>
-            <p>This class represents an audio device in the system and allows subscribing to audio device notifications.</p>
+            <p><code>AudioDevice</code> represents an audio device in the system.</p>
 
 <p>Devices may be physical or virtual. For a comprehensive list of supported types, please refer to <code><a href="../Enums/TransportType.html">TransportType</a></code>.</p>
 
