--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes/AudioObject.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes/AudioObject.html
@@ -112,9 +112,10 @@
 
                 </div>
               </div>
-            <p>This class represents a Core Audio object currently present in the system. In Core Audio,
-audio objects are referenced by its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.
-For more information, please refer to Core Audio&rsquo;s documentation or source code.</p>
+            <p><code>AudioObject</code> represents a Core Audio object currently present in the system. In Core Audio,
+audio objects are referenced by its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.</p>
+
+<p>For more information, please refer to Core Audio&rsquo;s documentation or source code.</p>
 
           </div>
         </section>
