--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes/AudioStream.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes/AudioStream.html
@@ -112,9 +112,7 @@
 
                 </div>
               </div>
-            <p><code>AudioStream</code></p>
-
-<p>This class represents an audio stream belonging to an audio object.</p>
+            <p><code>AudioStream</code> represents an audio stream that belongs to an audio object.</p>
 
           </div>
         </section>
