--- a/Classes/AudioObject.html
+++ b/Classes/AudioObject.html
@@ -112,8 +112,8 @@
 
                 </div>
               </div>
-            <p><code>AudioObject</code> represents a Core Audio object currently present in the system. In Core Audio,
-audio objects are referenced by its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.</p>
+            <p><code>AudioObject</code> represents a Core Audio managed audio object. In Core Audio, audio objects are referenced by
+its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.</p>
 
 <p>For more information, please refer to Core Audio&rsquo;s documentation or source code.</p>
 
@@ -230,7 +230,7 @@ audio objects are referenced by its <code>AudioObjectID</code> and belong to a s
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>The audio object&rsquo;s name as reported by the system.</p>
+                        <p>The audio object&rsquo;s name as reported by Core Audio.</p>
 
                       </div>
                       <div class="declaration">
