--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes.html
@@ -126,7 +126,7 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p><code>AudioDevice</code> represents an audio device in the system.</p>
+                        <p><code>AudioDevice</code> represents an audio device managed by Core Audio.</p>
 
 <p>Devices may be physical or virtual. For a comprehensive list of supported types, please refer to <code><a href="Enums/TransportType.html">TransportType</a></code>.</p>
 
@@ -157,8 +157,8 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p><code>AudioObject</code> represents a Core Audio object currently present in the system. In Core Audio,
-audio objects are referenced by its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.</p>
+                        <p><code>AudioObject</code> represents a Core Audio managed audio object. In Core Audio, audio objects are referenced by
+its <code>AudioObjectID</code> and belong to a specific <code>AudioClassID</code>.</p>
 
 <p>For more information, please refer to Core Audio&rsquo;s documentation or source code.</p>
 
