--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes/SimplyCoreAudio.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Classes/SimplyCoreAudio.html
@@ -148,7 +148,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the audio device identifiers currently available in the system.</p>
+                        <p>All the audio device identifiers currently available.</p>
 <div class="aside aside-note">
     <p class="aside-title">Note</p>
     <p>This list may also include <em>Aggregate</em> and <em>Multi-Output</em> devices.</p>
@@ -184,7 +184,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the audio devices currently available in the system.</p>
+                        <p>All the audio devices currently available.</p>
 <div class="aside aside-note">
     <p class="aside-title">Note</p>
     <p>This list may also include <em>Aggregate</em> and <em>Multi-Output</em> devices.</p>
@@ -220,7 +220,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the devices in the system that have at least one input.</p>
+                        <p>All the devices that have at least one input.</p>
 <div class="aside aside-note">
     <p class="aside-title">Note</p>
     <p>This list may also include <em>Aggregate</em> devices.</p>
@@ -256,7 +256,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the devices in the system that have at least one output.</p>
+                        <p>All the devices that have at least one output.</p>
 <div class="aside aside-note">
     <p class="aside-title">Note</p>
     <p>The list may also include <em>Aggregate</em> and <em>Multi-Output</em> devices.</p>
@@ -292,7 +292,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the devices in the system that support input and output.</p>
+                        <p>All the devices that support input and output.</p>
 <div class="aside aside-note">
     <p class="aside-title">Note</p>
     <p>The list may also include <em>Aggregate</em> and <em>Multi-Output</em> devices.</p>
@@ -328,7 +328,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the devices in the system that are real devices - not aggregate ones.</p>
+                        <p>All the devices that are real devices — not aggregate ones.</p>
 
                       </div>
                       <div class="declaration">
@@ -359,7 +359,7 @@ are delivered.</p>
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>All the devices in the system that are aggregate devices.</p>
+                        <p>All the devices that are aggregate devices.</p>
 
                       </div>
                       <div class="declaration">
