publish: Declaring notifications as a `Notification.Name` extension for easier use and making extension public.
generated from commit c9a5dc7007f020be916a4b2e758d418ed4386bc1

--- a/Extensions.html
+++ b/Extensions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Type Aliases  Reference</title>
+    <title>Extensions  Reference</title>
     <link rel="stylesheet" type="text/css" href="css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/swift/Section/Type Aliases" class="dashAnchor"></a>
+    <a name="//apple_ref/swift/Section/Extensions" class="dashAnchor"></a>
 
-    <a title="Type Aliases  Reference"></a>
+    <a title="Extensions  Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -44,7 +44,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="index.html">SimplyCoreAudio Reference</a>
       <img class="carat" src="img/carat.png" />
-      Type Aliases  Reference
+      Extensions  Reference
     </p>
 
     <div class="content-wrapper">
@@ -114,8 +114,8 @@
 
         <section class="section">
           <div class="section-content top-matter">
-            <h1>Type Aliases</h1>
-            <p>The following type aliases are available globally.</p>
+            <h1>Extensions</h1>
+            <p>The following extensions are available globally.</p>
 
           </div>
         </section>
@@ -127,9 +127,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:15SimplyCoreAudio10StereoPaira"></a>
-                    <a name="//apple_ref/swift/Alias/StereoPair" class="dashAnchor"></a>
-                    <a class="token" href="#/s:15SimplyCoreAudio10StereoPaira">StereoPair</a>
+                    <a name="/"></a>
+                    <a name="//apple_ref/swift/Extension/Notification" class="dashAnchor"></a>
+                    <a class="token" href="#/">Notification</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -137,16 +137,8 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Represents a pair of stereo channel numbers.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">typealias</span> <span class="kt">StereoPair</span> <span class="o">=</span> <span class="p">(</span><span class="nv">left</span><span class="p">:</span> <span class="kt">UInt32</span><span class="p">,</span> <span class="nv">right</span><span class="p">:</span> <span class="kt">UInt32</span><span class="p">)</span></code></pre>
-
-                        </div>
+                        
+                        <a href="Extensions/Notification.html" class="slightly-smaller">See more</a>
                       </div>
                     </section>
                   </div>
